external-crates/move/move-compiler/tests/move_2024/naming/positional_struct_non_positional_pack.exp
error[E03013]: positional call mismatch
  ┌─ tests/move_2024/naming/positional_struct_non_positional_pack.move:7:18
  │
7 │         let _x = Foo { pos0: 0 };
  │                  ^^^^^^^^^^^^^^^ Invalid struct instantiation. Positional struct declarations require positional instantiations.

error[E04016]: too few arguments
  ┌─ tests/move_2024/naming/positional_struct_non_positional_pack.move:7:18
  │
7 │         let _x = Foo { pos0: 0 };
  │                  ^^^^^^^^^^^^^^^ Missing argument for field '0' in '0x42::M::Foo'

error[E03010]: unbound field
  ┌─ tests/move_2024/naming/positional_struct_non_positional_pack.move:7:18
  │
7 │         let _x = Foo { pos0: 0 };
  │                  ^^^^^^^^^^^^^^^ Unbound field 'pos0' in '0x42::M::Foo'

